--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "vitest": "^3.0.4"
   },
   "dependencies": {
+    "@meshsdk/core-csl": "1.9.0-beta.0",
     "@utxorpc/sdk": "^0.6.7",
-    "axios": "^1.7.9"
+    "@utxorpc/spec": "^0.16.0",
+    "dotenv": "^16.4.7"
   }
 }
