--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest --forceExit"
   },
   "files": [
     "dist",
@@ -35,6 +35,7 @@
     "@meshsdk/core-csl": "1.9.0-beta.0",
     "@utxorpc/sdk": "^0.6.7",
     "@utxorpc/spec": "^0.16.0",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "ioredis": "^5.5.0"
   }
 }
