--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "rootDir": "./src",
       "strict": true,
       "declaration": true,
-      "esModuleInterop": true
+      "esModuleInterop": true,
+      "resolveJsonModule": true
     },
     "include": ["src"],
     "exclude": ["node_modules", "dist", "test"]
