--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,20 @@
 {
-    "compilerOptions": {
-      "target": "ES2022",
-      "module": "ESNext",
-      "moduleResolution": "Node",
-      "outDir": "./dist",
-      "rootDir": "./src",
-      "strict": true,
-      "declaration": true,
-      "esModuleInterop": true,
-      "resolveJsonModule": true
-    },
-    "include": ["src"],
-    "exclude": ["node_modules", "dist", "test"]
-  }
-  
+  "compilerOptions": {
+    "target": "ES2022",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "strict": true,
+    "declaration": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["src/*"],
+      "@andamio-config": ["./andamio-config.json"]
+    }
+  },
+  "include": ["src", "test"],
+  "exclude": ["node_modules", "dist", "test"]
+}
