--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "test": "jest --forceExit"
+    "test": "jest --forceExit",
+    "format": "prettier --write --cache --cache-location node_modules/.cache/.prettiercache ."
   },
   "files": [
     "dist",
@@ -31,7 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "eslint": "^9.19.0",
     "jest": "^29.7.0",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.0",
     "ts-jest": "^29.2.5",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
