--- a/package.json
+++ b/package.json
@@ -39,9 +39,12 @@
     "vitest": "^3.0.4"
   },
   "dependencies": {
+    "@meshsdk/common": "1.9.0-beta.4",
+    "@meshsdk/core": "1.9.0-beta.4",
     "@meshsdk/core-csl": "1.9.0-beta.0",
     "@utxorpc/sdk": "^0.6.7",
     "@utxorpc/spec": "^0.16.0",
+    "cbor": "^10.0.3",
     "dotenv": "^16.4.7",
     "ioredis": "^5.5.0"
   }
