--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
       "@andamio-config": ["./andamio-config.json"]
     }
   },
-  "include": ["src", "test"],
+  "include": ["src"],
   "exclude": ["node_modules", "dist", "test"]
 }
