--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
   },
   "dependencies": {
     "@meshsdk/common": "1.9.0-beta.4",
-    "@meshsdk/core": "1.9.0-beta.4",
     "@meshsdk/core-csl": "1.9.0-beta.0",
+    "@meshsdk/core-cst": "1.9.0-beta.4",
     "@utxorpc/sdk": "^0.6.7",
     "@utxorpc/spec": "^0.16.0",
     "cbor": "^10.0.3",
