--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -21,43 +21,48 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Git user
         run: |
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
 
-      - name: Clone docs-site repository
+      - name: Clone docs-site repository with SSH
         run: |
-          git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/Andamio-Platform/docs-site.git
+          # Clone with SSH
+          git clone git@github.com:Andamio-Platform/docs-site.git
           cd docs-site
+          # Set local repository to use SSH
+          git remote set-url origin git@github.com:Andamio-Platform/docs-site.git
 
       - name: Update submodule to latest main
         working-directory: docs-site
         run: |
-          # Initialize submodules with HTTPS URLs
-          git config --global url."https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/".insteadOf "git@github.com:"
-
-          # Make sure .gitmodules uses HTTPS
+          # Initialize and update submodules using SSH
           if [ -f .gitmodules ]; then
-            sed -i 's|git@github.com:|https://github.com/|g' .gitmodules
+            # If using SSH URLs, keep them as is
+            git submodule init
+            git submodule update
+          else
+            echo "No .gitmodules file found"
           fi
 
-          # Initialize and update the submodule
-          git submodule init
-          git submodule update
+          # Get the latest commit hash from node-sdk main
+          cd ..
+          LATEST_COMMIT=$(git rev-parse HEAD)
+          cd docs-site
 
-          # Set the submodule URL to HTTPS and update to latest main
-          git submodule set-url node-sdk https://github.com/Andamio-Platform/node-sdk.git
-          git submodule set-branch --branch main node-sdk
-          git submodule update --remote --merge node-sdk
+          # Update the node-sdk submodule to the latest commit
+          cd node-sdk || (mkdir -p node-sdk && cd node-sdk && git init)
+          git fetch git@github.com:Andamio-Platform/node-sdk.git main
+          git checkout $LATEST_COMMIT
+          cd ..
 
       - name: Commit and push changes
         working-directory: docs-site
         run: |
-          git add .
-          git commit -m "Update node-sdk submodule to latest main" || echo "No changes to commit"
+          git add node-sdk
+          git commit -m "Update node-sdk submodule to latest main commit $LATEST_COMMIT" || echo "No changes to commit"
           git push origin main
 
       - name: Trigger docs-site workflow
