--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "@andamiojs/sdk",
-  "version": "0.0.4",
+  "version": "0.0.5",
+  "type": "module",
   "description": "",
   "types": "dist/index.d.ts",
   "main": "dist/index.js",
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
-    }
+    "import": "./dist/index.js",
+    "require": "./dist/cjs/index.cjs",
+    "types": "./dist/index.d.ts"
   },
   "scripts": {
-    "build": "tsc",
+    "example:start": "tsx example/demo.ts",
+    "build": "tsc && tsc --module CommonJS --outDir dist/cjs",
     "test": "jest --forceExit",
     "format": "prettier --write --cache --cache-location node_modules/.cache/.prettiercache ."
   },
