--- a/package.json
+++ b/package.json
@@ -1,52 +1,30 @@
 {
   "name": "@andamiojs/sdk",
-  "version": "0.0.5",
-  "type": "module",
-  "description": "",
-  "types": "dist/index.d.ts",
+  "version": "0.0.6",
+  "description": "Query Andamio data and build transactions",
   "main": "dist/index.js",
-  "exports": {
-    "import": "./dist/index.js",
-    "require": "./dist/cjs/index.cjs",
-    "types": "./dist/index.d.ts"
-  },
-  "scripts": {
-    "example:start": "tsx example/demo.ts",
-    "build": "tsc && tsc --module CommonJS --outDir dist/cjs",
-    "test": "jest --forceExit",
-    "format": "prettier --write --cache --cache-location node_modules/.cache/.prettiercache ."
-  },
+  "types": "dist/index.d.ts",
   "files": [
-    "dist",
-    "README.md",
-    "LICENSE"
+    "dist"
   ],
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab",
-  "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.19.0",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.10",
-    "@typescript-eslint/eslint-plugin": "^8.22.0",
-    "eslint": "^9.19.0",
-    "jest": "^29.7.0",
-    "prettier": "^3.5.0",
-    "ts-jest": "^29.2.5",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.3",
-    "vitest": "^3.0.4"
+  "scripts": {
+    "build": "tsc",
+    "prepublishOnly": "pnpm run build",
+    "test": "jest",
+    "link": "pnpm link --global",
+    "unlink": "pnpm unlink --global"
   },
-  "dependencies": {
-    "@meshsdk/common": "1.9.0-beta.4",
-    "@meshsdk/core-csl": "1.9.0-beta.0",
-    "@meshsdk/core-cst": "1.9.0-beta.4",
-    "@utxorpc/sdk": "^0.6.7",
-    "@utxorpc/spec": "^0.16.0",
-    "cbor": "^10.0.3",
-    "dotenv": "^16.4.7",
-    "ioredis": "^5.5.0"
+  "keywords": [
+    "math",
+    "sdk",
+    "typescript"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.6",
+    "typescript": "^5.8.2"
   }
 }
