--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@meshsdk/common": "1.9.0-beta.18",
     "@meshsdk/core-cst": "1.9.0-beta.18",
     "@utxorpc/sdk": "^0.6.7",
-    "@utxorpc/spec": "^0.16.0"
+    "@utxorpc/spec": "^0.16.0",
+    "cbor": "^10.0.3"
   }
 }
