--- a/package.json
+++ b/package.json
@@ -2,13 +2,22 @@
   "name": "@andamiojs/sdk",
   "version": "0.0.7",
   "description": "Query Andamio data and build transactions",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "type": "module",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/cjs/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "rm -rf dist && tsc",
+    "build": "rm -rf dist && tsc && tsc -p tsconfig.cjs.json",
     "prepublishOnly": "pnpm run build",
     "test": "jest",
     "link": "pnpm link --global",
