wip: sync andamio txs

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 BASE_URL="https://preprod.utxorpc-v0.demeter.run:443"
 DMTR_API_KEY="dmtr_utxorpc..."
 REDIS_URL="redis://localhost:6379"
+DOLOS_MINI_BLOCKFROST_URL="http://192.169.1.7:50052"
